{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 189,
  "lineage": "752abea8-29cb-4075-63dd-7cbee9103c63",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:vpc/vpc-00d6be1c5a16dee04",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c44f703696b493a3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ebeab00159a27693",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d6be1c5a16dee04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b40e47a8b4cf09f0",
            "owner_id": "058264261029"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc502cf69c3e506",
            "arn": "arn:aws:ec2:us-west-2:058264261029:elastic-ip/eipalloc-02fc502cf69c3e506",
            "association_id": "eipassoc-0e2e009f339d968c6",
            "domain": "vpc",
            "id": "eipalloc-02fc502cf69c3e506",
            "instance": "i-0d7bd6f78e44f3cdb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-017ff736eab42bb25",
            "private_dns": "ip-172-31-7-146.us-west-2.compute.internal",
            "private_ip": "172.31.7.146",
            "public_dns": "ec2-52-89-220-34.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.220.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.public_ec2_instance.aws_eip.this",
            "module.public_ec2_instance.aws_iam_instance_profile.this",
            "module.public_ec2_instance.aws_iam_role.this",
            "module.public_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.public_ec2_instance.aws_instance.ignore_ami",
            "module.public_ec2_instance.aws_instance.this",
            "module.public_ec2_instance.aws_spot_instance_request.this",
            "module.public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.public_ec2_instance.data.aws_partition.current",
            "module.public_ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/my-alb/ce80dc55d699d41c",
            "arn_suffix": "app/my-alb/ce80dc55d699d41c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-329094955.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/my-alb/ce80dc55d699d41c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02704b9b3023f514b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06179db4d691f8fee"
              },
              {
                "subnet_id": "subnet-08c209262ecd86433"
              },
              {
                "subnet_id": "subnet-0a734a279778830f1"
              },
              {
                "subnet_id": "subnet-0e6a3da57968010a4"
              }
            ],
            "subnets": [
              "subnet-06179db4d691f8fee",
              "subnet-08c209262ecd86433",
              "subnet-0a734a279778830f1",
              "subnet-0e6a3da57968010a4"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00d6be1c5a16dee04",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-http-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:listener/app/my-alb/ce80dc55d699d41c/38f19a5756f1a073",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:listener/app/my-alb/ce80dc55d699d41c/38f19a5756f1a073",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/my-alb/ce80dc55d699d41c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_private_subnets",
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.private_ec2_instance.aws_iam_instance_profile.this",
            "module.private_ec2_instance.aws_iam_role.this",
            "module.private_ec2_instance.aws_instance.ignore_ami",
            "module.private_ec2_instance.aws_instance.this",
            "module.private_ec2_instance.aws_spot_instance_request.this",
            "module.private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_ec2_instance.data.aws_partition.current",
            "module.private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71",
            "arn_suffix": "targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mytg1-20241009073538707600000005",
            "name_prefix": "mytg1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d6be1c5a16dee04"
          },
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_private_subnets",
            "data.aws_vpc.default_vpc",
            "module.private_ec2_instance.aws_iam_instance_profile.this",
            "module.private_ec2_instance.aws_iam_role.this",
            "module.private_ec2_instance.aws_instance.ignore_ami",
            "module.private_ec2_instance.aws_instance.this",
            "module.private_ec2_instance.aws_spot_instance_request.this",
            "module.private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_ec2_instance.data.aws_partition.current",
            "module.private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71-20241009073545485700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241009073538707600000005/aa2e85dbf6984c71",
            "target_id": "i-061ce36d475e07efc"
          },
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_private_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current",
            "module.private_ec2_instance.aws_iam_instance_profile.this",
            "module.private_ec2_instance.aws_iam_role.this",
            "module.private_ec2_instance.aws_instance.ignore_ami",
            "module.private_ec2_instance.aws_instance.this",
            "module.private_ec2_instance.aws_spot_instance_request.this",
            "module.private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_ec2_instance.data.aws_partition.current",
            "module.private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group/sg-02704b9b3023f514b",
            "description": "Security group for my-alb application load balancer",
            "egress": [],
            "id": "sg-02704b9b3023f514b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-alb-20241005023958648100000003",
            "name_prefix": "my-alb-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d6be1c5a16dee04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4ffd9fc3ef71fc6",
            "arn": "arn:aws:ec2:us-west-2:058264261029:instance/i-061ce36d475e07efc",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061ce36d475e07efc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfd517156ebd785c",
            "private_dns": "ip-172-31-64-57.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.64.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a530a15792735c7",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "private-sg-20241009073450385800000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002524695689e954e",
            "tags": {
              "Name": "dev-vm",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-vm",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-vm"
            },
            "vpc_security_group_ids": [
              "sg-0587780b7d34ae96e"
            ]
          },
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_private_subnets",
            "data.aws_vpc.default_vpc",
            "module.private_ec2_instance.aws_iam_instance_profile.this",
            "module.private_ec2_instance.aws_iam_role.this",
            "module.private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_ec2_instance.data.aws_partition.current",
            "module.private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group/sg-0587780b7d34ae96e",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0587780b7d34ae96e",
            "ingress": [],
            "name": "private-sg-20241009073450385800000002",
            "name_prefix": "private-sg-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-00d6be1c5a16dee04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4018632917",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0587780b7d34ae96e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-924650909",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0587780b7d34ae96e",
            "security_group_rule_id": "sgr-08c5f39522da529b9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2595973294",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0587780b7d34ae96e",
            "security_group_rule_id": "sgr-03434ff61facf3c36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group/sg-007db54bed2a2637b",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-007db54bed2a2637b",
            "ingress": [],
            "name": "public-bastion-sg-20241009073450385700000001",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-00d6be1c5a16dee04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3440976684",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-007db54bed2a2637b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-555921970",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007db54bed2a2637b",
            "security_group_rule_id": "sgr-0452ff93cbb2892c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4ffd9fc3ef71fc6",
            "arn": "arn:aws:ec2:us-west-2:058264261029:instance/i-0d7bd6f78e44f3cdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7bd6f78e44f3cdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017ff736eab42bb25",
            "private_dns": "ip-172-31-7-146.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.146",
            "public_dns": "ec2-34-208-28-188.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.28.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0010e31aed2c2de8b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "public-bastion-sg-20241009073450385700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6a3da57968010a4",
            "tags": {
              "Name": "dev-BastionHost",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-BastionHost",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-007db54bed2a2637b"
            ]
          },
          "dependencies": [
            "data.aws_ami.terraform-ec2-07-aws_ami",
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.public_ec2_instance.aws_iam_instance_profile.this",
            "module.public_ec2_instance.aws_iam_role.this",
            "module.public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.public_ec2_instance.data.aws_partition.current",
            "module.public_ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    }
  ]
}